unpackaged/main/default/objects/Linked_Hate__c/Linked_Hate__c.object-meta.xml
<CustomObject>
    <label>Linked Hate</label>
    <nameField>
        <displayFormat>LH-{0}</displayFormat>
        <label>Linked Hate #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Hates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>