unpackaged/main/default/objects/Linked_Hate__c/fields/Link_Hate_To__c.field-meta.xml
<CustomField>
    <fullName>Link_Hate_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Link Hate To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Linked Hates</relationshipLabel>
    <relationshipName>Linked_Hates</relationshipName>
    <type>Lookup</type>
</CustomField>