unpackaged/main/default/objects/Linked_Hate__c/fields/Linked_Between__c.field-meta.xml
<CustomField>
    <fullName>Linked_Between__c</fullName>
    <formula>HYPERLINK('/' + Linked_Hate_From__r.Contact_Name__c, Linked_Hate_From__r.Contact_Name__r.Full_Name__c) &amp; ' &lt;-&gt; ' &amp; HYPERLINK('/' + Linked_Hate_To__r.Contact_Name__c, Linked_Hate_To__r.Contact_Name__r.Full_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Between</label>
    <type>Text</type>
</CustomField>