unpackaged/main/default/objects/Linked_Hate__c/fields/Linked_Hate__c.field-meta.xml
<CustomField>
    <fullName>Linked_Hate__c</fullName>
    <formula>HYPERLINK('/' + Linked_Hate_From__c, Linked_Hate_From__r.Name) &amp; ' &lt;-&gt; ' &amp; HYPERLINK('/' + Linked_Hate_To__c, Linked_Hate_To__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Hate</label>
    <type>Text</type>
</CustomField>