unpackaged/main/default/objects/Linked_Hate__c/fields/Linked_Hate_From__c.field-meta.xml
<CustomField>
    <fullName>Linked_Hate_From__c</fullName>
    <label>Linked Hate From</label>
    <referenceTo>Hates__c</referenceTo>
    <relationshipLabel>Linked Hates (From)</relationshipLabel>
    <relationshipName>Linked_Hates_From</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>