unpackaged/main/default/objects/Linked_Hate__c/fields/Linked_Hate_To__c.field-meta.xml
<CustomField>
    <fullName>Linked_Hate_To__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Linked Hate To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Linked_Hate_From__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hates__c</referenceTo>
    <relationshipLabel>Linked Hates (Linked Hate To)</relationshipLabel>
    <relationshipName>Linked_Hates_To</relationshipName>
    <type>Lookup</type>
</CustomField>